# BuildingApplicationsWithAIAgents

./: main.py  pyproject.toml
book_chapters/ch2/: agent.py
book_chapters/ch3/: voice_chat.py  voice_chat_frontend.py
