[project]
name = "buildingapplicationswithaiagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-openai>=1.1.0",
    "langgraph>=1.0.3",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "typing-extensions>=4.15.0",
]
